crates/knok/tests/ui/unsupported_element_type.stderr
error: unsupported tensor element type; supported types are bool, f32, f64, i32, i64, and half::f16/half::bf16 when the `half` feature is enabled
 --> tests/ui/unsupported_element_type.rs:4:27
  |
4 | fn unsupported(x: Tensor1<u8, 4>) -> Tensor1<u8, 4> {
  |                           ^^

warning: unused import: `knok::prelude::*`
 --> tests/ui/unsupported_element_type.rs:1:5
  |
1 | use knok::prelude::*;
  |     ^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
